tests/ui/tuple/tuple-bracket-index-suggest-dot.stderr
error[E0608]: cannot index into a value of type `({integer}, {integer}, {integer})`
  --> $DIR/tuple-bracket-index-suggest-dot.rs:8:16
   |
LL |     let _ = tup[0];
   |                ^^^ help: to access tuple element `0`, use: `.0`
   |
   = help: tuples are indexed with a dot and a literal index: `tuple.0`, `tuple.1`, etc.

error[E0608]: cannot index into a value of type `({integer}, {integer}, {integer})`
  --> $DIR/tuple-bracket-index-suggest-dot.rs:13:16
   |
LL |     let _ = tup[i];
   |                ^^^
   |
   = help: tuples are indexed with a dot and a literal index: `tuple.0`, `tuple.1`, etc.

error[E0608]: cannot index into a value of type `({integer},)`
  --> $DIR/tuple-bracket-index-suggest-dot.rs:18:16
   |
LL |     let _ = tup[3];
   |                ^^^
   |
   = help: tuples are indexed with a dot and a literal index: `tuple.0`, `tuple.1`, etc.

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0608`.
